Switched to Gson and fixed data saving